# cs50_intro_to_ai_with_python

./: .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/cs50_intro_to_ai_with_python/degrees/: degrees.py
src/cs50_intro_to_ai_with_python/maze/: complex_maze.txt  error_messages.py  maze.py  maze_gen.py
src/cs50_intro_to_ai_with_python/tictactoe/: runner.py  tictactoe.py
tests/: test_maze.py
tests/maze/: ai_gen_maze.txt  generate_maze.py  test_maze.py  test_maze_print.py
tests/test_files/: complex_maze_generated_by_jetbrains_ai_assistant.txt  maze1.txt  maze2.txt
