[project]
name = "cs50_intro_to_ai_with_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
name = "cs50_intro_to_ai_with_python"
version = "0.1.0"
description = "Code from the course with added tests"
authors = ["asmoores <a.s.moores@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
